tests/snapshots/markdown__parse_error.snap
---
source: tests/markdown.rs
expression: output
---
error: expected `:`
  ┌─ test input:1:10
  │
1 │ let input;
  │          ^ expected `:`
  │
  = expected `:`
